school-management-system/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: school-system
  labels:
    name: school-system
    app.kubernetes.io/name: school-management-system
