school-management-system/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sms-app-service
  namespace: school-system
  labels:
    app: sms-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: sms-app
